...
            // currentUser = userRepository.getById(response.accessToken, response.accessToken.decodeJwt().second.nameid)
            if (user !== undefined) {
                this.currentUser = user;
                    resolve(user);
                }
            else {
                    reject(new Error("Mot de passe ou mail incorrect"));
                }
        });
    }

    register(email: string, password: string, username: string): Promise<User> {
        return new Promise((resolve, reject) => {
...
