...

}, []);
    return (
        <SafeView style={styles.container} disableBottomInset>
            <ThemedView style={styles.content}>
                <View style={styles.segmentedControl}>
                    <BlurSegmented tabsName={['Camera', 'Map']} onTabChange={switchView}/>
                </View>
                <Animated.View style={[styles.viewContainer, animatedStyle]}>
                    {isCameraActive
                        &&
                        <>
                            <CameraView  setBase64Image={handleSetBase64Image} setCapturedImage={handleSetCapturedImage}
...
